@@ -1,18 +1,18 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
-import com.google.gson.JsonDeserializationContext;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonSerializationContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.logging.LogUtils;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.UnaryOperator;
 import javax.annotation.Nullable;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.ComponentUtils;
-import net.minecraft.util.GsonHelper;
+import net.minecraft.util.ExtraCodecs;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.loot.LootContext;
@@ -22,14 +22,23 @@ import org.slf4j.Logger;
 
 public class SetNameFunction extends LootItemConditionalFunction {
 	private static final Logger LOGGER = LogUtils.getLogger();
-	final Component name;
-	@Nullable
-	final LootContext.EntityTarget resolutionContext;
+	public static final Codec<SetNameFunction> CODEC = RecordCodecBuilder.create(
+		instance -> commonFields(instance)
+				.<Optional<Component>, Optional<LootContext.EntityTarget>>and(
+					instance.group(
+						ExtraCodecs.strictOptionalField(ExtraCodecs.COMPONENT, "name").forGetter(setNameFunction -> setNameFunction.name),
+						ExtraCodecs.strictOptionalField(LootContext.EntityTarget.CODEC, "entity").forGetter(setNameFunction -> setNameFunction.resolutionContext)
+					)
+				)
+				.apply(instance, SetNameFunction::new)
+	);
+	private final Optional<Component> name;
+	private final Optional<LootContext.EntityTarget> resolutionContext;
 
-	SetNameFunction(LootItemCondition[] lootItemConditions, @Nullable Component component, @Nullable LootContext.EntityTarget entityTarget) {
-		super(lootItemConditions);
-		this.name = component;
-		this.resolutionContext = entityTarget;
+	private SetNameFunction(List<LootItemCondition> list, Optional<Component> optional, Optional<LootContext.EntityTarget> optional2) {
+		super(list);
+		this.name = optional;
+		this.resolutionContext = optional2;
 	}
 
 	@Override
@@ -39,7 +48,7 @@ public class SetNameFunction extends LootItemConditionalFunction {
 
 	@Override
 	public Set<LootContextParam<?>> getReferencedContextParams() {
-		return this.resolutionContext != null ? ImmutableSet.of(this.resolutionContext.getParam()) : ImmutableSet.of();
+		return (Set<LootContextParam<?>>)this.resolutionContext.map(entityTarget -> Set.of(entityTarget.getParam())).orElse(Set.of());
 	}
 
 	public static UnaryOperator<Component> createResolver(LootContext lootContext, @Nullable LootContext.EntityTarget entityTarget) {
@@ -63,37 +72,18 @@ public class SetNameFunction extends LootItemConditionalFunction {
 
 	@Override
 	public ItemStack run(ItemStack itemStack, LootContext lootContext) {
-		if (this.name != null) {
-			itemStack.setHoverName((Component)createResolver(lootContext, this.resolutionContext).apply(this.name));
-		}
-
+		this.name
+			.ifPresent(
+				component -> itemStack.setHoverName((Component)createResolver(lootContext, (LootContext.EntityTarget)this.resolutionContext.orElse(null)).apply(component))
+			);
 		return itemStack;
 	}
 
 	public static LootItemConditionalFunction.Builder<?> setName(Component component) {
-		return simpleBuilder(lootItemConditions -> new SetNameFunction(lootItemConditions, component, null));
+		return simpleBuilder(list -> new SetNameFunction(list, Optional.of(component), Optional.empty()));
 	}
 
 	public static LootItemConditionalFunction.Builder<?> setName(Component component, LootContext.EntityTarget entityTarget) {
-		return simpleBuilder(lootItemConditions -> new SetNameFunction(lootItemConditions, component, entityTarget));
-	}
-
-	public static class Serializer extends LootItemConditionalFunction.Serializer<SetNameFunction> {
-		public void serialize(JsonObject jsonObject, SetNameFunction setNameFunction, JsonSerializationContext jsonSerializationContext) {
-			super.serialize(jsonObject, setNameFunction, jsonSerializationContext);
-			if (setNameFunction.name != null) {
-				jsonObject.add("name", Component.Serializer.toJsonTree(setNameFunction.name));
-			}
-
-			if (setNameFunction.resolutionContext != null) {
-				jsonObject.add("entity", jsonSerializationContext.serialize(setNameFunction.resolutionContext));
-			}
-		}
-
-		public SetNameFunction deserialize(JsonObject jsonObject, JsonDeserializationContext jsonDeserializationContext, LootItemCondition[] lootItemConditions) {
-			Component component = Component.Serializer.fromJson(jsonObject.get("name"));
-			LootContext.EntityTarget entityTarget = GsonHelper.getAsObject(jsonObject, "entity", null, jsonDeserializationContext, LootContext.EntityTarget.class);
-			return new SetNameFunction(lootItemConditions, component, entityTarget);
-		}
+		return simpleBuilder(list -> new SetNameFunction(list, Optional.of(component), Optional.of(entityTarget)));
 	}
 }
